:wrench: #251 github action dockerfile 수정2